[build-system]
requires = ["setuptools>=67", "setuptools_scm>=7", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "wrds/_version.py"

[project]
name = "wrds"
description = "Access WRDS data through PostgreSQL in Python."
authors =  [
    {name = "Alex Malek", email = "amalek@wharton.upenn.edu"},
    {name = "Tim Allen", email = "tallen@wharton.upenn.edu"},
    {name = "Jeff VanSickle", email = "vjef@wharton.upenn.edu"},
    {name = "Eric Stein", email = "ericst@wharton.upenn.edu"},
]
license = {text = "BSD-3-Clause"}
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["wrds", "finance", "research", "crsp", "compustat"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: BSD License",
]
dependencies = [
    "numpy",
    "pandas",
    "psycopg2-binary",
    "scipy",
    "sqlalchemy<2",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "http://wrds-www.wharton.upenn.edu"
"Repository" = "https://github.com/wharton/wrds"
"Documentation" = "https://github.com/wharton/wrds/blob/master/README.rst"
